--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "queue": "cpp",
         "cstddef": "cpp",
         "iostream": "cpp",
-        "array": "cpp"
+        "array": "cpp",
+        "__locale": "cpp"
     }
 }
