--- a/Pi Code/CMakeLists.txt
+++ b/Pi Code/CMakeLists.txt
@@ -4,6 +4,7 @@ project(ckociemba)
 set(raspicam_DIR "/usr/local/lib/cmake")
 find_package(raspicam REQUIRED)
 find_package(OpenCV)
+find_library(wiringPi_LIB wiringPi)
 
 set(SOURCE_FILES
         include/color.h
@@ -14,6 +15,7 @@ set(SOURCE_FILES
         include/facecube.h
         include/facelet.h
         include/search.h
+        include/stdafx.h
         coordcube.c
         cubiecube.c
         facecube.c
@@ -24,5 +26,10 @@ include_directories(include/
 		    ${OpenCV_INCLUDE_DIRS})
 
 add_executable(ckociemba ${SOURCE_FILES})
+
 set_property(TARGET ckociemba PROPERTY CXX_STANDARD 11)
 set_property(TARGET ckociemba PROPERTY C_STANDARD 11)
+
+target_link_libraries(ckociemba ${OpenCV_LIBS})
+target_link_libraries (ckociemba ${raspicam_CV_LIBS})
+target_link_libraries(ckociemba ${wiringPi_LIB})
